fixed main img, spacing issue, changing text space

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ header {
     display: flex;
     justify-content: center;
     height: auto;
-    width: 50%;
+    width: 30%;
     overflow: hidden;
     background-color: white;
     flex-shrink: 0;
@@ -84,8 +84,8 @@ header {
 }
 
 .about-image > img {
-    height: 600px;
-    width: auto;
+    height: auto;
+    width: 30rem;
     border-radius: 60px;
 }
 
@@ -127,19 +127,20 @@ header {
     z-index: 1;
 }
 
-
-/* .btn-pane > button:disabled {
-    cursor: not-allowed;
-    opacity: 0.5
-} */
-
 .about-section {
     display: flex;
-    /* justify-content: center; */
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 100px;
-    margin-left: 75px;
+    margin-left: 30px; /* Remove left margin for true centering */
+    width: 100%;
+}
 
+.animated-title {
+    display: inline-block;
+    min-width: 270px; /* Adjust to fit your longest word */
+    text-align: left;
 }
 
 .education-section > h1 {
@@ -208,7 +209,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     background-color: white;
-    width: 50%;
+    width: 70%;
 }
 
 .services-list > span {
@@ -222,7 +223,7 @@ header {
     width: 50%;
     height: 50px;
     border-radius: 50px;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -230,7 +231,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 30%;
     font-size: 1.5rem;
 }
 
